# esp32_ED_TFT_Fuel_Gauge

./: .gitignore  README.txt  platformio.ini
drive/: edlogo.c
include/: ed_flag_helpers.hpp  lv_conf.h
src/: CMakeLists.txt  Wire.h edited lines.txt  edlogo.cpp  edlogo.hpp  filelist.txt  main.cpp  main.cpp.backup  typedefs.hpp  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_textbutton.c  ui_comp_textbutton.h
src/fonts/: ui_font_Eurose16.c
src/images/: ui_img_1367923625.c
src/screens/: ui_ScreenFuel.c  ui_scrPloatformioOTA.c  ui_screenButtons.c  ui_screenWaitingForData.c  ui_screenWiFiConfig.c
